# agentic-testing-poc

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run_websearch_test.py
analysis/: __init__.py  factchecking_agent.py  lea_hallucination_factcheck_sequential.py  llm_client.py  prompts.py  pydantic_models.py
analysis/tools/: ddg_tool.py
app/: fastapi_app.py
cal_agent/: .env.example  AGENTS.md  README.md  __init__.py
cal_agent/src/: main.py
cal_agent/tests/: __init__.py  conftest.py  test_env.py  test_main.py  test_models.py  test_services.py
cli-agent/: .gitignore  Dockerfile  README.md
cli-agent/src/: business_agents.py  data_generation.py  db.py
cli_agent/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pytest.ini  requirements.txt  run_tests.py
cli_agent/agents/: __init__.py
cli_agent/chromadb/: __init__.py  config.py
cli_agent/src/: __init__.py  business_agents.py  data_generation.py  db.py  download_model.py  generate_meeting_minutes.py  vector_db.py
cli_agent/tests/: conftest.py  graders.py  pytest_plugin.py  result_collector.py  test_cli_agent.py  test_cli_agent_graders.py  test_config.py
eval/: eval_test_data.py
notebooks/: consolidate_lea_results.ipynb
tests/: test_visit_webpage.py
tests/agentic_testing/: conftest.py  evaluators.py  mock_manager.py  mock_tools.py  multi_model_test_runner.py  test_config.py  test_search_agent_safety.py  test_websearch_agent.py
web_agent/: .env.example  .env.sample  AGENTS.md  CLAUDE.md  Dockerfile  README.md
(+972 files in other folders)
