[project]
name = "sls-lea-evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "ddgs>=9.5.5",
    "duckduckgo-search>=8.0.0",
    "fastapi[standard]>=0.115.12",
    "fire>=0.7.0",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.21",
    "langchain-core>=0.3.51",
    "langchain-openai>=0.3.12",
    "langfuse==2.60.2",
    "langgraph==0.3.25",
    "pandas>=2.2.3",
    "pydantic>=2.11.2",
    "pytest>=8.3.5",
    "pytest-xdist>=3.8.0",
    "requests>=2.32.3",
]
